--- a/app/Application.scss
+++ b/app/Application.scss
@@ -3,3 +3,13 @@
  *  styling should be located the view's corresponding scss file.
  */
 $enable-font-awesome: dynamic(true);
+$myapp-button-icon-color: #fff;
+$myapp-tab-icon-color: rgb(11, 103, 196);
+
+.tabIcon {
+    color: $myapp-tab-icon-color;
+}
+
+.buttonIcon {
+    color: $myapp-button-icon-color;
+}
